--- a/contacts.html
+++ b/contacts.html
@@ -189,6 +189,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -577,6 +580,9 @@
                     </li>
                     <li>
                       <a href="class-single-esg.html" title="">ESG Course</a>
+                    </li>
+                    <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
                     </li>
                     <li>
                       <a href="class-single-investment-banking.html" title=""
