--- a/event-single.html
+++ b/event-single.html
@@ -555,6 +555,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking</a
                       >
