--- a/class-single-cma.html
+++ b/class-single-cma.html
@@ -2,35 +2,129 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CMA Course in India | Certified Management Accountant | CCGE</title>
+    <title>
+      Best CMA Course in India | US CMA Certified Management Accountant | 85%
+      Pass Rate | CCGE Hyderabad
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="CMA Course in India - Certified Management Accountant. 85% pass rate vs 40% global. Duration 6-9 months. EMI from ₹9,000/month. Join 200,000+ professionals globally. Get free brochure now!"
+      content="🏆 #1 US CMA Course in India at CCGE Hyderabad. 85% Pass Rate vs 40% Global. Certified Management Accountant Training by IMA USA. Fast-track Strategic Finance Career. Duration 6-9 months, EMI ₹9,000/month. Join 100,000+ CMA professionals globally. Free Demo Class + Placement Support!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="CMA course India, CMA certification, Certified Management Accountant, global management accounting certification, CMA syllabus, CMA fees, CMA eligibility, finance courses, management courses, CCGE"
+      content="CMA course India, best CMA training Hyderabad, US CMA certification India, CMA classes near me, Certified Management Accountant course, CMA exam preparation India, CMA coaching institute Hyderabad, CMA fees India, CMA syllabus , CMA eligibility India, CMA job opportunities India, CMA salary India, CMA vs CA, US CMA vs Indian CMA, CMA course duration, CMA placement assistance, CCGE CMA reviews, top CMA institute India, CMA online classes India, CMA weekend batches Hyderabad, IMA CMA certification"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="CMA Course in India | Certified Management Accountant | CCGE"
+      content="🏆 Best US CMA Course in India  | Strategic Finance Training | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="CMA Course in India - Certified Management Accountant. 85% pass rate vs 40% global. Duration 6-9 months. EMI from ₹9,000/month."
+      content="Join India's #1 US CMA Training Institute. 85% Pass Rate vs 40% Global. Strategic Finance & Management Accounting Training by IMA USA. Fast-track Career. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ccge.in/class-single-cma.html" />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE CMA Professionals" />
+    <meta property="article:section" content="Finance Education" />
+    <meta property="article:tag" content="CMA Course India" />
+    <meta property="article:tag" content="CMA Training Hyderabad" />
+    <meta property="article:tag" content="Management Accounting" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CMA Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best US CMA Course in India | Strategic Finance Training | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="CMA Course in India - Certified Management Accountant. 85% pass rate vs 40% global. Duration 6-9 months."
+      content="India's #1 US CMA Training. 85% Pass Rate. Strategic Finance & Management Accounting. IMA USA Certification. Fast-track Career Growth!"
     />
     <link rel="canonical" href="https://ccge.in/class-single-cma.html" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "US CMA - Certified Management Accountant",
+        "description": "Comprehensive US CMA course training in India with 85% pass rate. Strategic finance and management accounting training by IMA USA certified professionals.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "CMA-",
+        "educationalCredentialAwarded": "US CMA Certification",
+        "numberOfCredits": "2",
+        "timeRequired": "P9M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree or equivalent",
+        "occupationalCredentialAwarded": "Certified Management Accountant",
+        "teaches": [
+          "Management Accounting",
+          "Strategic Finance",
+          "Financial Planning",
+          "Performance Management",
+          "Cost Management",
+          "Internal Controls"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "350",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "9000",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -848,6 +942,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -898,6 +995,7 @@
               <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
               <li><a href="class-single-frm.html" title="">FRM Course</a></li>
               <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+              <li><a href="class-single-ea.html" title="">EA Course</a></li>
               <li>
                 <a href="class-single-investment-banking.html" title=""
                   >Investment Banking Operations</a
@@ -956,6 +1054,9 @@
                       </li>
                       <li>
                         <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-ea.html" title="">EA Course</a>
                       </li>
                       <li>
                         <a href="class-single-investment-banking.html" title=""
@@ -1789,7 +1890,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> CMA Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> CMA Syllabus
                     </h5>
                     <p
                       style="
@@ -2053,6 +2154,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking</a
                       >
@@ -2139,6 +2243,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2224,7 +2330,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
