--- a/class-single-cpa.html
+++ b/class-single-cpa.html
@@ -2,35 +2,129 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>CPA Course in India | Certified Public Accountant | CCGE</title>
+    <title>
+      Best CPA Course in India | US CPA Certified Public Accountant | 85% Pass
+      Rate | CCGE Hyderabad
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="CPA Course in India - Certified Public Accountant. 85% pass rate vs 40% global. Duration 1 year. EMI from ₹5,000/month. Join 200,000+ professionals globally. Get free brochure now!"
+      content="🏆 #1 US CPA Course in India at CCGE Hyderabad. 85% Pass Rate vs 40% Global. Certified Public Accountant Training by AICPA USA. Global Accounting Career. Duration 1 year, EMI ₹5,000/month. Join 650,000+ CPA professionals globally. Free Demo Class + Placement Support!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="CPA course India, CPA certification, Certified Public Accountant, US accounting certification, CPA syllabus, CPA fees, CPA eligibility, finance courses, accounting courses, CCGE"
+      content="CPA course India, best CPA training Hyderabad, US CPA certification India, CPA classes near me, Certified Public Accountant course, CPA exam preparation India, CPA coaching institute Hyderabad, CPA fees India, CPA syllabus , CPA eligibility India, CPA job opportunities India, CPA salary India, CPA vs CA, US CPA vs Indian CA, CPA course duration, CPA placement assistance, CCGE CPA reviews, top CPA institute India, CPA online classes India, CPA weekend batches Hyderabad, AICPA CPA certification"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="CPA Course in India | Certified Public Accountant | CCGE"
+      content="🏆 Best US CPA Course in India  | Global Accounting Certification | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="CPA Course in India - Certified Public Accountant. 85% pass rate vs 40% global. Duration 1 year. EMI from ₹5,000/month."
+      content="Join India's #1 US CPA Training Institute. 85% Pass Rate vs 40% Global. Global Accounting & Auditing Training by AICPA USA. Fast-track International Career. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ccge.in/class-single-cpa.html" />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE CPA Professionals" />
+    <meta property="article:section" content="Finance Education" />
+    <meta property="article:tag" content="CPA Course India" />
+    <meta property="article:tag" content="CPA Training Hyderabad" />
+    <meta property="article:tag" content="Public Accounting" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="CPA Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best US CPA Course in India | Global Accounting Certification | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="CPA Course in India - Certified Public Accountant. 85% pass rate vs 40% global. Duration 1 year."
+      content="India's #1 US CPA Training. 85% Pass Rate. Global Accounting & Auditing. AICPA USA Certification. Join 650,000+ CPA Professionals!"
     />
     <link rel="canonical" href="https://ccge.in/class-single-cpa.html" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "US CPA - Certified Public Accountant",
+        "description": "Comprehensive US CPA course training in India with 85% pass rate. Global accounting and auditing certification training by AICPA USA certified professionals.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "CPA-",
+        "educationalCredentialAwarded": "US CPA License",
+        "numberOfCredits": "4",
+        "timeRequired": "P12M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree with accounting credits",
+        "occupationalCredentialAwarded": "Certified Public Accountant",
+        "teaches": [
+          "Auditing",
+          "Financial Accounting",
+          "Regulation",
+          "Business Environment",
+          "Tax Compliance",
+          "Ethics"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "300",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "5000",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -1850,7 +1944,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> CPA Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> CPA Syllabus
                     </h5>
                     <p
                       style="
@@ -2206,6 +2300,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2291,7 +2387,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
