--- a/class-single-esg.html
+++ b/class-single-esg.html
@@ -2,35 +2,129 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>ESG Course in India | Post Graduate Program in ESG | CCGE</title>
+    <title>
+      Best ESG Course in India | Post Graduate Program ESG | 223% Job Growth |
+      CCGE Hyderabad
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="ESG Course in India - Post Graduate Program in ESG. 223% job growth since 2019. Duration 6 months. Flexible EMI options. CTC up to ₹13 LPA. Join professionals globally. Get free brochure now!"
+      content="🏆 #1 ESG Course in India at CCGE Hyderabad. Post Graduate Program in ESG - Environmental Social Governance. 223% Job Growth since 2019. Sustainability Expert Career. Duration 6 months, CTC up to ₹13 LPA. Join Global ESG Professionals. Free Demo Class + Placement Support!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="ESG course India, ESG certification, Environmental Social Governance, sustainability certification, ESG syllabus, ESG fees, ESG eligibility, finance courses, sustainability courses, CCGE"
+      content="ESG course India, best ESG training Hyderabad, ESG certification India, ESG classes near me, Environmental Social Governance course, ESG exam preparation India, ESG coaching institute Hyderabad, ESG fees India, ESG syllabus , ESG eligibility India, ESG job opportunities India, ESG salary India, ESG vs CSR, sustainability certification, ESG course duration, ESG placement assistance, CCGE ESG reviews, top ESG institute India, ESG online classes India, ESG weekend batches Hyderabad, climate finance course"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="ESG Course in India | Post Graduate Program in ESG | CCGE"
+      content="🏆 Best ESG Course in India  | Sustainability Expert Training | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months. EMI from Flexible EMI Options."
+      content="Join India's #1 ESG Training Institute. Post Graduate Program in ESG. 223% Job Growth. Environmental Social Governance Expert Career. CTC up to ₹13 LPA. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ccge.in/class-single-esg.html" />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE ESG Sustainability Experts" />
+    <meta property="article:section" content="Finance Education" />
+    <meta property="article:tag" content="ESG Course India" />
+    <meta property="article:tag" content="ESG Training Hyderabad" />
+    <meta property="article:tag" content="Sustainability" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ESG Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best ESG Course in India | Sustainability Expert Training | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months."
+      content="India's #1 ESG Training. Post Graduate Program in ESG. 223% Job Growth. Environmental Social Governance Expert. CTC up to ₹13 LPA!"
     />
     <link rel="canonical" href="https://ccge.in/class-single-esg.html" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "Post Graduate Program in ESG",
+        "description": "Comprehensive ESG course training in India. Environmental Social Governance certification with 223% job growth. Sustainability expert career training.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "ESG-",
+        "educationalCredentialAwarded": "ESG Certification",
+        "numberOfCredits": "1",
+        "timeRequired": "P6M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree or equivalent",
+        "occupationalCredentialAwarded": "ESG Specialist",
+        "teaches": [
+          "Environmental Sustainability",
+          "Social Responsibility",
+          "Corporate Governance",
+          "Climate Finance",
+          "Impact Measurement",
+          "ESG Reporting"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "180",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "Contact for pricing",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -848,6 +942,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -898,6 +995,7 @@
               <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
               <li><a href="class-single-frm.html" title="">FRM Course</a></li>
               <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+              <li><a href="class-single-ea.html" title="">EA Course</a></li>
               <li>
                 <a href="class-single-investment-banking.html" title=""
                   >Investment Banking Operations</a
@@ -956,6 +1054,9 @@
                       </li>
                       <li>
                         <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-ea.html" title="">EA Course</a>
                       </li>
                       <li>
                         <a href="class-single-investment-banking.html" title=""
@@ -1802,7 +1903,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> ACCA Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> ACCA Syllabus
                     </h5>
                     <p
                       style="
@@ -2066,6 +2167,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking</a
                       >
@@ -2158,6 +2262,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2243,7 +2349,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
