--- a/class-single-frm.html
+++ b/class-single-frm.html
@@ -2,35 +2,129 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>FRM Course in India | Financial Risk Management | CCGE</title>
+    <title>
+      Best FRM Course in India | Financial Risk Manager GARP | 85% Pass Rate |
+      CCGE Hyderabad
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="FRM Course in India - Financial Risk Management. 85% pass rate vs 45% global. Duration 12-18 months. EMI from ₹6,167/month. Join 200,000+ professionals globally. Get free brochure now!"
+      content="🏆 #1 FRM Course in India at CCGE Hyderabad. 85% Pass Rate vs 45% Global. Financial Risk Manager Training by GARP USA. Risk Management Expert Career. Duration 12-18 months, EMI ₹6,167/month. Join 60,000+ FRM professionals globally. Free Demo Class + Placement Support!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="FRM course India, FRM certification, Financial Risk Management, global risk certification, FRM syllabus, FRM fees, FRM eligibility, finance courses, risk management courses, CCGE"
+      content="FRM course India, best FRM training Hyderabad, FRM certification India, FRM classes near me, Financial Risk Manager course, FRM exam preparation India, FRM coaching institute Hyderabad, FRM fees India, FRM syllabus , FRM eligibility India, FRM job opportunities India, FRM salary India, FRM vs CFA, GARP FRM certification, FRM course duration, FRM placement assistance, CCGE FRM reviews, top FRM institute India, FRM online classes India, FRM weekend batches Hyderabad, risk management certification"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="FRM Course in India | Financial Risk Management | CCGE"
+      content="🏆 Best FRM Course in India  | Risk Management Expert Training | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="FRM Course in India - Financial Risk Management. 85% pass rate vs 45% global. Duration 12-18 months. EMI from ₹6,167/month."
+      content="Join India's #1 FRM Training Institute. 85% Pass Rate vs 45% Global. Financial Risk Manager Training by GARP USA. Risk Management Expert Career. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="article" />
     <meta property="og:url" content="https://ccge.in/class-single-frm.html" />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE FRM Risk Experts" />
+    <meta property="article:section" content="Finance Education" />
+    <meta property="article:tag" content="FRM Course India" />
+    <meta property="article:tag" content="FRM Training Hyderabad" />
+    <meta property="article:tag" content="Risk Management" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="FRM Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best FRM Course in India | Risk Management Expert Training | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="FRM Course in India - Financial Risk Management. 85% pass rate vs 45% global. Duration 12-18 months."
+      content="India's #1 FRM Training. 85% Pass Rate. Financial Risk Manager by GARP USA. Risk Management Expert Career. Join 60,000+ FRM Professionals!"
     />
     <link rel="canonical" href="https://ccge.in/class-single-frm.html" />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "FRM - Financial Risk Manager",
+        "description": "Comprehensive FRM course training in India with 85% pass rate. Financial risk management certification training by GARP USA certified professionals.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "FRM-",
+        "educationalCredentialAwarded": "FRM Certification",
+        "numberOfCredits": "2",
+        "timeRequired": "P18M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree in finance or related field",
+        "occupationalCredentialAwarded": "Financial Risk Manager",
+        "teaches": [
+          "Market Risk",
+          "Credit Risk",
+          "Operational Risk",
+          "Liquidity Risk",
+          "Investment Risk",
+          "Risk Modeling"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "250",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "6167",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -848,6 +942,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -898,6 +995,7 @@
               <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
               <li><a href="class-single-frm.html" title="">FRM Course</a></li>
               <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+              <li><a href="class-single-ea.html" title="">EA Course</a></li>
               <li>
                 <a href="class-single-investment-banking.html" title=""
                   >Investment Banking Operations</a
@@ -956,6 +1054,9 @@
                       </li>
                       <li>
                         <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-ea.html" title="">EA Course</a>
                       </li>
                       <li>
                         <a href="class-single-investment-banking.html" title=""
@@ -1797,7 +1898,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> FRM Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> FRM Syllabus
                     </h5>
                     <p
                       style="
@@ -2061,6 +2162,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking</a
                       >
@@ -2153,6 +2257,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2238,7 +2344,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
