--- a/class-single-global-investment-banking.html
+++ b/class-single-global-investment-banking.html
@@ -3,36 +3,137 @@
   <head>
     <meta charset="UTF-8" />
     <title>
-      Global Investment Banking Course in India | Certification | CCGE
+      Best Global Investment Banking Course in India | GIB Certification | Elite
+      Network | CCGE Hyderabad
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Global Investment Banking Course in India - Certification. Elite Network Connecting Top CEOs and CFOs. Duration 6 months. Guaranteed Paid Internship. Salary up to ₹18 LPA. Get free brochure now!"
+      content="🏆 #1 Global Investment Banking Course in India at CCGE Hyderabad. GIB Certification - Elite Network Connecting Top CEOs & CFOs. Guaranteed Paid Internship. Salary up to ₹18 LPA. Duration 6 months. Expert Training + Placement Support. Enroll Now!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="Global Investment Banking course India, GIB certification, investment banking certification, GIB syllabus, GIB fees, GIB eligibility, finance courses, banking courses, CCGE"
+      content="Global Investment Banking course India, best GIB training Hyderabad, Global Investment Banking certification India, GIB classes near me, Global Investment Banking course, GIB exam preparation India, Global Investment Banking coaching institute Hyderabad, GIB fees India, Global Investment Banking syllabus , GIB eligibility India, Global Investment Banking job opportunities India, Global Investment Banking salary India, GIB vs MBA, Global Investment Banking course duration, GIB placement assistance, CCGE GIB reviews, top Global Investment Banking institute India, GIB online classes India, GIB weekend batches Hyderabad"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="Global Investment Banking Course in India | Certification | CCGE"
+      content="🏆 Best Global Investment Banking Course in India  | Elite Network Training | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months. EMI from Flexible EMI Options."
+      content="Join India's #1 Global Investment Banking Training Institute. GIB Certification - Elite Network. Guaranteed Paid Internship. Salary up to ₹18 LPA. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ccge.in/class-single-esg.html" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://ccge.in/class-single-global-investment-banking.html"
+    />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE Global Banking Experts" />
+    <meta property="article:section" content="Finance Education" />
+    <meta
+      property="article:tag"
+      content="Global Investment Banking Course India"
+    />
+    <meta property="article:tag" content="GIB Training Hyderabad" />
+    <meta property="article:tag" content="Global Investment Banking" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ESG Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best Global Investment Banking Course in India | Elite Network | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months."
+      content="India's #1 Global Investment Banking Training. GIB Certification - Elite Network. Guaranteed Paid Internship. Salary up to ₹18 LPA!"
     />
-    <link rel="canonical" href="https://ccge.in/class-single-esg.html" />
+    <link
+      rel="canonical"
+      href="https://ccge.in/class-single-global-investment-banking.html"
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "Global Investment Banking Certification",
+        "description": "Comprehensive Global Investment Banking course training in India. Elite network connecting top CEOs and CFOs with guaranteed paid internship opportunities.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "GIB-",
+        "educationalCredentialAwarded": "Global Investment Banking Certificate",
+        "numberOfCredits": "1",
+        "timeRequired": "P6M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree or equivalent",
+        "occupationalCredentialAwarded": "Global Investment Banking Specialist",
+        "teaches": [
+          "Global Deal Structuring",
+          "International Mergers & Acquisitions",
+          "Cross-border Finance",
+          "Capital Markets",
+          "Financial Advisory",
+          "Global Financial Modeling"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "100",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "Contact for pricing",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -850,6 +951,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -900,6 +1004,7 @@
               <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
               <li><a href="class-single-frm.html" title="">FRM Course</a></li>
               <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+              <li><a href="class-single-ea.html" title="">EA Course</a></li>
               <li>
                 <a href="class-single-investment-banking.html" title=""
                   >Investment Banking Operations</a
@@ -960,6 +1065,9 @@
                       </li>
                       <li>
                         <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-ea.html" title="">EA Course</a>
                       </li>
                       <li>
                         <a href="class-single-investment-banking.html" title=""
@@ -1807,7 +1915,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> ACCA Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> ACCA Syllabus
                     </h5>
                     <p
                       style="
@@ -2163,6 +2271,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2248,7 +2358,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
