--- a/class-single-investment-banking.html
+++ b/class-single-investment-banking.html
@@ -3,37 +3,134 @@
   <head>
     <meta charset="UTF-8" />
     <title>
-      Investment Banking Operations Course in India | Post Graduation Program |
-      CCGE
+      Best Investment Banking Course in India | IB Operations | Post Graduate
+      Program | CCGE Hyderabad
     </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Investment Banking Operations Course in India - Post Graduation Program. #1 Fastest Growing Finance Profession. Duration 6 months. Flexible EMI options. CTC up to ₹6 LPA. Get free brochure now!"
+      content="🏆 #1 Investment Banking Course in India at CCGE Hyderabad. Post Graduate Program in Investment Banking Operations. #1 Fastest Growing Finance Profession. CTC up to ₹6 LPA. Duration 6 months, Flexible EMI. Expert Training + Placement Support. Enroll Now!"
     />
-    <meta name="author" content="CCGE - Corporate Commerce" />
+    <meta name="author" content="CCGE - Corporate Commerce Global Education" />
     <meta
       name="keywords"
-      content="Investment Banking Operations course India, IBO certification, Post Graduation Program, investment banking certification, IBO syllabus, IBO fees, IBO eligibility, finance courses, banking courses, CCGE"
+      content="Investment Banking course India, best Investment Banking training Hyderabad, IB Operations course India, Investment Banking classes near me, Post Graduate Program Investment Banking, IB exam preparation India, Investment Banking coaching institute Hyderabad, IB fees India, Investment Banking syllabus , IB eligibility India, Investment Banking job opportunities India, Investment Banking salary India, IB vs MBA, Investment Banking course duration, IB placement assistance, CCGE Investment Banking reviews, top IB institute India, Investment Banking online classes India, IB weekend batches Hyderabad"
     />
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
-      content="Investment Banking Operations Course in India | Post Graduation Program | CCGE"
+      content="🏆 Best Investment Banking Course in India  | IB Operations Training | CCGE Hyderabad"
     />
     <meta
       property="og:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months. EMI from Flexible EMI Options."
+      content="Join India's #1 Investment Banking Training Institute. Post Graduate Program in IB Operations. #1 Fastest Growing Finance Profession. CTC up to ₹6 LPA. Enroll Now!"
     />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ccge.in/class-single-esg.html" />
+    <meta property="og:type" content="article" />
+    <meta
+      property="og:url"
+      content="https://ccge.in/class-single-investment-banking.html"
+    />
+    <meta
+      property="og:site_name"
+      content="CCGE - Corporate Commerce Global Education"
+    />
+    <meta property="og:locale" content="en_IN" />
+    <meta property="article:author" content="CCGE Investment Banking Experts" />
+    <meta property="article:section" content="Finance Education" />
+    <meta property="article:tag" content="Investment Banking Course India" />
+    <meta property="article:tag" content="IB Training Hyderabad" />
+    <meta property="article:tag" content="Investment Banking Operations" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="ESG Course in India | CCGE" />
+    <meta name="twitter:site" content="@CCGEIndia" />
+    <meta name="twitter:creator" content="@CCGEIndia" />
+    <meta
+      name="twitter:title"
+      content="🏆 Best Investment Banking Course in India | IB Operations | CCGE"
+    />
     <meta
       name="twitter:description"
-      content="ESG Course in India - Post Graduate Program in ESG. 85% pass rate vs 40% global. Duration 6 Months."
+      content="India's #1 Investment Banking Training. Post Graduate Program in IB Operations. #1 Fastest Growing Finance Profession. CTC up to ₹6 LPA!"
     />
-    <link rel="canonical" href="https://ccge.in/class-single-esg.html" />
+    <link
+      rel="canonical"
+      href="https://ccge.in/class-single-investment-banking.html"
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta name="geo.region" content="IN-TG" />
+    <meta name="geo.placename" content="Hyderabad" />
+    <meta name="geo.position" content="17.4065;78.4772" />
+    <meta name="ICBM" content="17.4065, 78.4772" />
+    <meta name="rating" content="general" />
+    <meta name="revisit-after" content="1 days" />
+    <meta name="language" content="English" />
+    <meta name="distribution" content="global" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+
+    <!-- Schema.org structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Course",
+        "name": "Post Graduate Program in Investment Banking Operations",
+        "description": "Comprehensive Investment Banking Operations course training in India. Post graduate program with fastest growing finance profession opportunities.",
+        "provider": {
+          "@type": "EducationalOrganization",
+          "name": "CCGE - Corporate Commerce Global Education",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Opp. Madhura Nagar Metro Station, Beside SBI Bank Lane",
+            "addressLocality": "Ameerpet",
+            "addressRegion": "Hyderabad",
+            "addressCountry": "IN",
+            "postalCode": "500038"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+91-96666-60713",
+            "contactType": "Admissions"
+          },
+          "url": "https://ccge.in"
+        },
+        "courseCode": "IBO-",
+        "educationalCredentialAwarded": "Investment Banking Operations Certificate",
+        "numberOfCredits": "1",
+        "timeRequired": "P6M",
+        "inLanguage": "en",
+        "availableLanguage": "en",
+        "coursePrerequisites": "Bachelor's degree or equivalent",
+        "occupationalCredentialAwarded": "Investment Banking Operations Specialist",
+        "teaches": [
+          "Deal Structuring",
+          "Financial Analysis",
+          "Mergers & Acquisitions",
+          "Capital Markets",
+          "Financial Modeling",
+          "Due Diligence"
+        ],
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.8",
+          "reviewCount": "120",
+          "bestRating": "5",
+          "worstRating": "1"
+        },
+        "offers": {
+          "@type": "Offer",
+          "price": "Contact for pricing",
+          "priceCurrency": "INR",
+          "availability": "https://schema.org/InStock",
+          "validFrom": "-01-01"
+        }
+      }
+    </script>
     <link rel="icon" href="assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css" />
     <link
@@ -851,6 +948,9 @@
                       <a href="class-single-esg.html" title="">ESG Course</a>
                     </li>
                     <li>
+                      <a href="class-single-ea.html" title="">EA Course</a>
+                    </li>
+                    <li>
                       <a href="class-single-investment-banking.html" title=""
                         >Investment Banking Operations</a
                       >
@@ -901,6 +1001,7 @@
               <li><a href="class-single-cpa.html" title="">CPA Course</a></li>
               <li><a href="class-single-frm.html" title="">FRM Course</a></li>
               <li><a href="class-single-esg.html" title="">ESG Course</a></li>
+              <li><a href="class-single-ea.html" title="">EA Course</a></li>
               <li>
                 <a href="class-single-investment-banking.html" title=""
                   >Investment Banking Operations</a
@@ -961,6 +1062,9 @@
                       </li>
                       <li>
                         <a href="class-single-esg.html" title="">ESG Course</a>
+                      </li>
+                      <li>
+                        <a href="class-single-ea.html" title="">EA Course</a>
                       </li>
                       <li>
                         <a href="class-single-investment-banking.html" title=""
@@ -1810,7 +1914,7 @@
                     "
                   >
                     <h5 style="margin: 0 0 0.5rem 0; color: var(--dark-color)">
-                      <i class="fa fa-file-pdf"></i> ACCA Syllabus 2024
+                      <i class="fa fa-file-pdf"></i> ACCA Syllabus
                     </h5>
                     <p
                       style="
@@ -2167,6 +2271,8 @@
             "FRM by the Global Association of Risk Professionals (GARP, USA) is designed to equip professionals to manage business risks. Become a certified risk management expert.",
           "ESG - Post Graduate Program in ESG":
             "ESG certification is about companies focusing on making money and being good to the planet and running their businesses transparently and ethically.",
+          "EA - Enrolled Agent":
+            "EA is the highest U.S. tax credential authorized by the IRS. Perfect for graduates, CAs, or anyone interested in U.S. taxation with no specific qualifications required.",
           "Post Graduate Program in Investment Banking":
             "The Investment Banking course provides essential skills and hands-on training for a successful career in financial analysis and deal structuring.",
           "Global Investment Banking Certification":
@@ -2252,7 +2358,7 @@
           console.log("Google Form submission completed");
 
           // Open WhatsApp with pre-filled message
-          const whatsappUrl = `https://wa.me/919492417774?text=${encodeURIComponent(
+          const whatsappUrl = `https://wa.me/919666660713?text=${encodeURIComponent(
             whatsappMessage,
           )}`;
           window.open(whatsappUrl, "_blank");
