Pop-up Image Updated

--- a/classes.html
+++ b/classes.html
@@ -817,7 +817,7 @@
 
       <!-- EA Course Batch Announcement Popup -->
       <div id="eaBatchModal" class="modal fade" tabindex="-1" role="dialog" data-backdrop="static">
-        <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-dialog modal-dialog-centered" role="document" style="max-width: 600px; width: 95%;">
           <div class="modal-content" style="border: none; border-radius: 20px; overflow: hidden;">
             <div class="modal-header" style="background: linear-gradient(135deg, #dc3545 0%, #c82333 100%); color: white; border: none; padding: 2rem; text-align: center; position: relative;">
               <button
@@ -834,137 +834,64 @@
                   <i class="fa fa-graduation-cap" style="font-size: 40px; color: white;"></i>
                 </div>
                 <h4 class="modal-title" style="font-size: 1.8rem; font-weight: 700; margin: 0; color: white;">
-                  🎯 EA Course - New Batch Alert!
+                  🎯 New Course Launch!
                 </h4>
                 <p style="margin: 0.5rem 0 0 0; font-size: 1rem; opacity: 0.9; color: white;">
-                  Highest U.S. Tax Credential by IRS
+                  Expand Your Practice Beyond Borders
                 </p>
               </div>
             </div>
-            <div class="modal-body" style="padding: 2.5rem; background: white;">
-              <div class="text-center mb-4">
-                <h5 style="color: #dc3545; font-size: 1.4rem; font-weight: 600; margin-bottom: 1rem;">
-                  🚨 Limited Seats Available - Enroll Now!
-                </h5>
-                <p style="font-size: 1.1rem; color: #6c757d; line-height: 1.6; margin-bottom: 2rem;">
-                  Join India's Most Trusted EA Training Institute. Become a certified U.S. Tax Professional with the <strong>highest tax credential</strong> authorized by IRS.
-                </p>
+            <div class="modal-body" style="padding: 1.5rem; background: white; display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 400px;">
+              <!-- Promotional Image -->
+              <div style="text-align: center; margin-bottom: 1.5rem; flex-shrink: 0;">
+                <img 
+                  src="assets/images/uk-us-tax-promo.jpeg" 
+                  alt="UK & US Tax & Accounting Expert Course - CCGE"
+                  style="
+                    width: 100%;
+                    height: auto;
+                    max-width: 500px;
+                    max-height: 300px;
+                    object-fit: contain;
+                    border-radius: 10px;
+                    display: block;
+                    margin: 0 auto;
+                    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+                  "
+                  class="promo-image"
+                />
               </div>
-
-              <div class="batch-details" style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 2rem; border-radius: 15px; margin-bottom: 2rem;">
-                <h6 style="color: #dc3545; font-size: 1.2rem; font-weight: 600; text-align: center; margin-bottom: 1.5rem;">
-                  📅 New Batch Details
-                </h6>
-                <div class="row">
-                  <div class="col-md-6 col-12 mb-3">
-                    <div style="background: white; padding: 1rem; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
-                      <i class="fa fa-calendar-alt" style="color: #dc3545; font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
-                      <h6 style="margin: 0; color: #343a40; font-weight: 600;">Start Date</h6>
-                      <p style="margin: 0; color: #dc3545; font-weight: 700; font-size: 1.1rem;">10th Oct 2025</p>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-12 mb-3">
-                    <div style="background: white; padding: 1rem; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
-                      <i class="fa fa-clock" style="color: #dc3545; font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
-                      <h6 style="margin: 0; color: #343a40; font-weight: 600;">Duration</h6>
-                      <p style="margin: 0; color: #dc3545; font-weight: 700; font-size: 1.1rem;">45 Days</p>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-12 mb-3">
-                    <div style="background: white; padding: 1rem; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
-                      <i class="fa fa-clock" style="color: #dc3545; font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
-                      <h6 style="margin: 0; color: #343a40; font-weight: 600;">Time</h6>
-                      <p style="margin: 0; color: #dc3545; font-weight: 700; font-size: 1.1rem;">5:00 PM - 7:00 PM</p>
-                    </div>
-                  </div>
-                  <div class="col-md-6 col-12 mb-3">
-                    <div style="background: white; padding: 1rem; border-radius: 10px; text-align: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
-                      <i class="fa fa-laptop" style="color: #dc3545; font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
-                      <h6 style="margin: 0; color: #343a40; font-weight: 600;">Mode</h6>
-                      <p style="margin: 0; color: #dc3545; font-weight: 700; font-size: 1.1rem;">Online + Recorded + Q&A</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="benefits-section" style="margin-bottom: 2rem;">
-                <h6 style="color: #dc3545; font-size: 1.1rem; font-weight: 600; text-align: center; margin-bottom: 1rem;">
-                  🏆 Why Choose CCGE for EA?
-                </h6>
-                <div class="row">
-                  <div class="col-md-6 col-12">
-                    <ul style="list-style: none; padding: 0;">
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>No Prerequisites Required</strong>
-                      </li>
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>IRS Authorized Credential</strong>
-                      </li>
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>Expert U.S. Tax Faculty</strong>
-                      </li>
-                    </ul>
-                  </div>
-                  <div class="col-md-6 col-12">
-                    <ul style="list-style: none; padding: 0;">
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>Flexible Online Learning</strong>
-                      </li>
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>Recorded Sessions</strong>
-                      </li>
-                      <li style="margin-bottom: 0.5rem; color: #6c757d;">
-                        <i class="fa fa-check-circle" style="color: #28a745; margin-right: 0.5rem;"></i>
-                        <strong>Career Support</strong>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-
-              <div class="urgency-section" style="background: linear-gradient(135deg, #fff3cd 0%, #ffeaa7 100%); padding: 1.5rem; border-radius: 15px; text-align: center; margin-bottom: 2rem; border-left: 5px solid #ffc107;">
-                <h6 style="color: #856404; font-weight: 700; margin-bottom: 0.5rem; font-size: 1.1rem;">
-                  ⏰ Early Bird Offer - Limited Time!
-                </h6>
-                <p style="color: #856404; margin: 0; font-size: 0.95rem; line-height: 1.4;">
-                  <strong>Only 25 seats available!</strong> Secure your spot in India's most trusted EA training program.
-                </p>
-              </div>
-
-              <div class="text-center">
-                  <a
-                    href="#"
-                    class="btn-ea-enroll"
-                    style="
-                      background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
-                      color: white;
-                      padding: 1rem 2.5rem;
-                      border-radius: 50px;
-                      text-decoration: none;
-                      font-weight: 700;
-                      font-size: 1.1rem;
-                      display: inline-flex;
-                      align-items: center;
-                      gap: 0.8rem;
-                      box-shadow: 0 8px 25px rgba(220, 53, 69, 0.3);
-                      transition: all 0.3s ease;
-                      border: none;
-                      margin-bottom: 1rem;
-                    "
-                    onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 35px rgba(220, 53, 69, 0.4)'"
-                    onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 25px rgba(220, 53, 69, 0.3)'"
-                  >
-                    <i class="fa fa-rocket"></i> 
-                    Secure My EA Seat Now!
-                    <i class="fa fa-long-arrow-alt-right"></i>
-                  </a>
+              
+              <!-- CTA Button Section -->
+              <div style="text-align: center; flex-shrink: 0;">
+                <a
+                  href="#"
+                  class="btn-ea-enroll"
+                  style="
+                    background: linear-gradient(135deg, #dc3545 0%, #c82333 100%);
+                    color: white;
+                    padding: 1rem 2.5rem;
+                    border-radius: 50px;
+                    text-decoration: none;
+                    font-weight: 700;
+                    font-size: 1.1rem;
+                    display: inline-flex;
+                    align-items: center;
+                    gap: 0.8rem;
+                    box-shadow: 0 8px 25px rgba(220, 53, 69, 0.3);
+                    transition: all 0.3s ease;
+                    border: none;
+                    margin-bottom: 1rem;
+                  "
+                  onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 12px 35px rgba(220, 53, 69, 0.4)'"
+                  onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 8px 25px rgba(220, 53, 69, 0.3)'"
+                >
+                  <i class="fa fa-rocket"></i>
+                  Get Course Details Now!
+                  <i class="fa fa-long-arrow-alt-right"></i>
+                </a>
                 <p style="font-size: 0.9rem; color: #6c757d; margin: 0;">
-                  <i class="fa fa-phone"></i> Call: 96666 60713 / 14 | 
+                  <i class="fa fa-phone"></i> Call: 96666 60713 / 14 |
                   <i class="fa fa-clock"></i> Mon-Sat: 9 AM - 7 PM
                 </p>
               </div>
@@ -1154,6 +1081,34 @@
     <script src="assets/js/wow.min.js"></script>
     <script src="assets/js/scripts.js"></script>
     <script src="assets/js/navigation.js"></script>
+
+    <!-- Responsive CSS for Popup -->
+    <style>
+      @media (max-width: 768px) {
+        .promo-image {
+          max-width: 350px !important;
+          max-height: 250px !important;
+        }
+        .modal-body {
+          min-height: 350px !important;
+          padding: 1rem !important;
+        }
+        .modal-dialog {
+          max-width: 95% !important;
+          margin: 10px !important;
+        }
+      }
+      @media (max-width: 480px) {
+        .promo-image {
+          max-width: 300px !important;
+          max-height: 200px !important;
+        }
+        .modal-body {
+          min-height: 300px !important;
+          padding: 0.8rem !important;
+        }
+      }
+    </style>
 
     <!-- Brochure Form Modal -->
     <div id="brochureModal" class="modal fade" tabindex="-1" role="dialog">
