Enhance About, Classes, and Contacts pages: Updated navigation structure to include submenus for Founders and Gallery, improved SEO meta tags, and revamped content for better clarity and engagement. Adjusted image dimensions for better responsiveness.

--- a/index.html
+++ b/index.html
@@ -461,7 +461,13 @@
               <nav>
                 <ul>
                   <li><a href="index.html" title="">Home</a></li>
-                  <li><a href="about.html" title="">About</a></li>
+                  <li>
+                    <a href="about.html" title="">About</a>
+                    <ul>
+                      <li><a href="founders.html" title="">Founders</a></li>
+                      <li><a href="gallery.html" title="">Gallery</a></li>
+                    </ul>
+                  </li>
                   <li>
                     <a href="classes.html" title="">Courses</a>
                     <ul>
@@ -532,7 +538,13 @@
         <div class="responsive-menu">
           <ul>
             <li><a href="index.html" title="">Home</a></li>
-            <li><a href="about.html" title="">About</a></li>
+            <li>
+              <a href="about.html" title="">About</a>
+              <ul>
+                <li><a href="founders.html" title="">Founders</a></li>
+                <li><a href="gallery.html" title="">Gallery</a></li>
+              </ul>
+            </li>
             <li><a href="classes.html" title="">Courses</a></li>
             <li><a href="contacts.html" title="">Contact</a></li>
           </ul>
@@ -1803,8 +1815,8 @@
                   style="
                     width: 100%;
                     height: auto;
-                    max-width: 500px;
-                    max-height: 300px;
+                    max-width: 700px;
+                    max-height: 500px;
                     object-fit: contain;
                     border-radius: 10px;
                     display: block;
