--- a/classes.html
+++ b/classes.html
@@ -144,10 +144,16 @@
           <div class="navigation-bar d-flex flex-wrap align-items-center">
             <nav>
               <ul>
-                <li><a href="index.html" title="">Home</a></li>
-                <li><a href="about.html" title="">About</a></li>
-                <li>
-                  <a href="classes.html" title="">Courses</a>
+                  <li><a href="index.html" title="">Home</a></li>
+                  <li>
+                    <a href="about.html" title="">About</a>
+                    <ul>
+                      <li><a href="founders.html" title="">Founders</a></li>
+                      <li><a href="gallery.html" title="">Gallery</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="classes.html" title="">Courses</a>
                   <ul>
                     <li>
                       <a href="class-single-acca.html" title="">ACCA Course</a>
@@ -213,9 +219,15 @@
 
       <div class="responsive-menu">
         <ul>
-          <li><a href="index.html" title="">Home</a></li>
-          <li><a href="about.html" title="">About</a></li>
-          <li><a href="classes.html" title="">Courses</a></li>
+            <li><a href="index.html" title="">Home</a></li>
+            <li>
+              <a href="about.html" title="">About</a>
+              <ul>
+                <li><a href="founders.html" title="">Founders</a></li>
+                <li><a href="gallery.html" title="">Gallery</a></li>
+              </ul>
+            </li>
+            <li><a href="classes.html" title="">Courses</a></li>
           <li><a href="contacts.html" title="">Contact</a></li>
         </ul>
       </div>
@@ -850,8 +862,8 @@
                   style="
                     width: 100%;
                     height: auto;
-                    max-width: 500px;
-                    max-height: 300px;
+                    max-width: 700px;
+                    max-height: 500px;
                     object-fit: contain;
                     border-radius: 10px;
                     display: block;
