--- a/contacts.html
+++ b/contacts.html
@@ -166,7 +166,13 @@
             <nav>
               <ul>
                 <li><a href="index.html" title="">Home</a></li>
-                <li><a href="about.html" title="">About</a></li>
+                <li>
+                  <a href="about.html" title="">About</a>
+                  <ul>
+                    <li><a href="founders.html" title="">Founders</a></li>
+                    <li><a href="gallery.html" title="">Gallery</a></li>
+                  </ul>
+                </li>
                 <li>
                   <a href="classes.html" title="">Courses</a>
                   <ul>
@@ -235,7 +241,13 @@
       <div class="responsive-menu">
         <ul>
           <li><a href="index.html" title="">Home</a></li>
-          <li><a href="about.html" title="">About</a></li>
+          <li>
+            <a href="about.html" title="">About</a>
+            <ul>
+              <li><a href="founders.html" title="">Founders</a></li>
+              <li><a href="gallery.html" title="">Gallery</a></li>
+            </ul>
+          </li>
           <li><a href="classes.html" title="">Courses</a></li>
           <li><a href="contacts.html" title="">Contact</a></li>
         </ul>
