Add UK Taxation & Accounting course: Included course links and details across multiple pages, enhanced course descriptions, and added pricing options for better user engagement.

--- a/class-single-cfa.html
+++ b/class-single-cfa.html
@@ -983,6 +983,11 @@
                         >DipIFRS Course</a
                       >
                     </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
+                      >
+                    </li>
                   </ul>
                 </li>
 
@@ -2232,6 +2237,11 @@
                         >DipIFRS Course</a
                       >
                     </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -2316,6 +2326,8 @@
             "GIB - Global Investment Banking empowers you to master deals, mergers, and financial advisory with global career opportunities.",
           "DipIFRS - Diploma in International Financial Reporting":
             "IFRS certification stands for International Financial Reporting Standards, is a universally recognised accounting standard.",
+          "UK Taxation & Accounting":
+            "Master UK Taxation & Accounting with comprehensive training in Individual Tax, Corporate Tax, VAT, Payroll, and UK GAAP. Perfect for CA, CMA & CS professionals.",
         };
 
         // Handle brochure button clicks
