--- a/class-single-acca.html
+++ b/class-single-acca.html
@@ -979,6 +979,11 @@
                         >DipIFRS Course</a
                       >
                     </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
+                      >
+                    </li>
                   </ul>
                 </li>
                 <li><a href="contacts.html" title="">Contact</a></li>
@@ -2160,6 +2165,11 @@
                         >DipIFRS Course</a
                       >
                     </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
+                      >
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -2238,6 +2248,8 @@
             "GIB - Global Investment Banking empowers you to master deals, mergers, and financial advisory with global career opportunities.",
           "DipIFRS - Diploma in International Financial Reporting":
             "IFRS certification stands for International Financial Reporting Standards, is a universally recognised accounting standard.",
+          "UK Taxation & Accounting":
+            "Master UK Taxation & Accounting with comprehensive training in Individual Tax, Corporate Tax, VAT, Payroll, and UK GAAP. Perfect for CA, CMA & CS professionals.",
         };
 
         // Handle brochure button clicks
