--- a/classes.html
+++ b/classes.html
@@ -193,6 +193,11 @@
                         >DipIFRS Course</a
                       >
                     </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
+                      >
+                    </li>
                   </ul>
                 </li>
 
@@ -800,6 +805,58 @@
                   </div>
                   <!--classes-col end-->
                 </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                  <div class="classes-col">
+                    <div class="class-thumb">
+                      <img
+                        src="https://images.unsplash.com/photo-1554224155-8d04cb21cd6c?ixlib=rb-4.0.3&auto=format&fit=crop&w=1440&h=960&q=80"
+                        alt="UK Taxation and Accounting course"
+                        class="w-100"
+                      />
+                      <a href="#" title="" class="crt-btn">
+                        <img
+                          src="assets/img/icon10.png"
+                          alt="CCGE - Corporate Commerce Global Education"
+                          style="
+                            max-height: 50px;
+                            width: auto;
+                            margin-bottom: 15px;
+                          "
+                        />
+                      </a>
+                    </div>
+                    <div class="class-info">
+                      <h3>
+                        <a href="class-single-uk-tax.html" title=""
+                          >UK Taxation & Accounting</a
+                        >
+                      </h3>
+                      <span>Duration: 15 Days</span>
+                      <span>Mon-Fri | 10:00AM-12:00PM</span>
+                      <p>
+                        Master UK Taxation & Accounting with comprehensive training in Individual Tax, 
+                        Corporate Tax, VAT, Payroll, and UK GAAP. Perfect for CA, CMA & CS professionals.
+                      </p>
+                      <div class="d-flex flex-wrap align-items-center">
+                        <div class="posted-by">
+                          <a href="#" title="">UK Tax Experts</a>
+                        </div>
+                      </div>
+                      <div class="course-actions">
+                        <a href="class-single-uk-tax.html" class="btn-text"
+                          >Know More</a
+                        >
+                        <a
+                          href="#"
+                          class="btn-default get-brochure-btn"
+                          data-course="UK Taxation & Accounting"
+                          ><span>Get Brochure</span></a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                  <!--classes-col end-->
+                </div>
               </div>
             </div>
             <!--classes-sec end-->
@@ -1034,6 +1091,11 @@
                     <li>
                       <a href="class-single-dipifrs.html" title=""
                         >DipIFRS Course</a
+                      >
+                    </li>
+                    <li>
+                      <a href="class-single-uk-tax.html" title=""
+                        >UK Taxation & Accounting</a
                       >
                     </li>
                   </ul>
@@ -1286,6 +1348,8 @@
             "GIB - Global Investment Banking empowers you to master deals, mergers, and financial advisory with global career opportunities.",
           "DipIFRS - Diploma in International Financial Reporting":
             "IFRS certification stands for International Financial Reporting Standards, is a universally recognised accounting standard.",
+          "UK Taxation & Accounting":
+            "Master UK Taxation & Accounting with comprehensive training in Individual Tax, Corporate Tax, VAT, Payroll, and UK GAAP. Perfect for CA, CMA & CS professionals.",
         };
 
         // Handle brochure button clicks
